--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,12 @@
 buildscript {
     repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
-        mavenLocal()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:2.0.0-alpha2'
     }
 }
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 repositories {
     maven { url 'https://github.com/donnfelker/mvn-repo/raw/master/' }
@@ -18,19 +16,20 @@ repositories {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:19.1.+'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.dagger:dagger:1.0.1'
     compile 'com.squareup.dagger:dagger-compiler:1.0.1'
     compile 'com.jakewharton:butterknife:1.3.2'
+
     compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
+    compile 'com.github.kevinsawicki:http-request:3.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.kevinsawicki:android-pusher:0.6'
     compile 'com.github.kevinsawicki:wishlist:0.9'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.squareup.picasso:picasso:1.1.1'
+    compile 'com.squareup.okhttp:okhttp:1.5.4'
     compile 'com.squareup.retrofit:retrofit:1.5.1'
-
-
 
     androidTestCompile 'junit:junit:4.11'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
@@ -39,7 +38,7 @@ dependencies {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 8
@@ -70,11 +69,11 @@ android {
     buildTypes {
         debug {
             applicationIdSuffix '.debug'
-            runProguard false
+            minifyEnabled false
             // zipAlign false // this is default for debug
         }
         release {
-            // runProguard true
+            // minifyEnabled true
             // proguardFile '..\proguard.cfg'
             // signingConfig signingConfigs.release
             // zipAlign true // this is default for release
