--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -30,10 +30,14 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:1.5.4'
     compile 'com.squareup.retrofit:retrofit:1.5.1'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
+    compile 'com.github.nicolasjafelle:paginglistview:1.2'
 
     androidTestCompile 'junit:junit:4.11'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'org.mockito:mockito-core:1.9.5'
+
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
 }
 
 android {
@@ -41,7 +45,7 @@ android {
     buildToolsVersion '23.0.2'
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
         versionCode 102
         versionName '1.0'
