--- a/gmission/src/main/AndroidManifest.xml
+++ b/gmission/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/Theme.Bootstrap.Dark">
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name">
             <intent-filter>
@@ -34,17 +34,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.BootstrapTimerActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:label="@string/app_name"
-                  android:launchMode="singleTop"
-                  android:parentActivityName="hk.ust.gmission.ui.MainActivity" >
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <!-- Both parent activity attributes have to contain the full package name -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="hk.ust.gmission.ui.MainActivity" />
-        </activity>
         <activity
             android:name="hk.ust.gmission.authenticator.BootstrapAccountRegister"
             android:excludeFromRecents="true"
@@ -56,8 +45,6 @@
                 someone who explicitly knows the class name
             -->
         </activity>
-
-        <service android:name=".core.TimerService" android:enabled="true" android:exported="false" />
 
         <service
             android:name=".authenticator.AccountAuthenticatorService"
@@ -81,8 +68,8 @@
             -->
         </activity>
 
-        <activity android:name=".ui.NewsActivity" />
-        <activity android:name=".ui.UserActivity" android:label="@string/app_name" />
+        <activity android:name=".ui.activities.NewsActivity" />
+        <activity android:name=".ui.activities.UserActivity" android:label="@string/app_name" />
 
     </application>
 
