--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha2'
+        classpath 'com.android.tools.build:gradle:2.0.0-alpha3'
     }
 }
 apply plugin: 'com.android.application'
@@ -19,7 +19,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.dagger:dagger:1.0.1'
     compile 'com.squareup.dagger:dagger-compiler:1.0.1'
-    compile 'com.jakewharton:butterknife:1.3.2'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
     compile 'com.github.kevinsawicki:http-request:3.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -38,6 +38,10 @@ dependencies {
 
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
+
+    compile 'com.jakewharton.timber:timber:2.4.2'
+
 }
 
 android {
@@ -45,7 +49,7 @@ android {
     buildToolsVersion '23.0.2'
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 19
         versionCode 102
         versionName '1.0'
