--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha3'
+//        classpath 'com.android.tools.build:gradle:2.0.0-alpha3'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 apply plugin: 'com.android.application'
@@ -15,7 +16,20 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.1.+'
+    
+
+
+    androidTestCompile 'junit:junit:4.11'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'
+
+    
+    
+
+    
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.squareup.dagger:dagger-compiler:1.2.2'
@@ -29,27 +43,18 @@ dependencies {
     compile 'com.squareup.picasso:picasso:1.1.1'
     compile 'com.squareup.okhttp:okhttp:1.5.4'
     compile 'com.squareup.retrofit:retrofit:1.5.1'
-
-    androidTestCompile 'junit:junit:4.11'
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-    androidTestCompile 'org.mockito:mockito-core:1.9.5'
-
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
-
     compile 'com.jakewharton.timber:timber:2.4.2'
-
-
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'in.srain.cube:cube-sdk:1.0.44@aar'
     compile 'com.github.nicolasjafelle:paginglistview:1.2'
-
-
+    compile 'com.android.support:support-v4:23.1.1'
 }
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 23
     buildToolsVersion '23.0.2'
 
     defaultConfig {
@@ -66,12 +71,12 @@ android {
     }
 
     // signingConfigs {
-        // release {
-            // storeFile file(System.getenv('ANDROID_KEYSTORE_PATH'))
-            // storePassword System.getenv('ANDROID_STORE_PASS')
-            // keyAlias System.getenv('ANDROID_KEY_ALIAS')
-            // keyPassword System.getenv('ANDROID_KEY_PASS')
-        // }
+    // release {
+    // storeFile file(System.getenv('ANDROID_KEYSTORE_PATH'))
+    // storePassword System.getenv('ANDROID_STORE_PASS')
+    // keyAlias System.getenv('ANDROID_KEY_ALIAS')
+    // keyPassword System.getenv('ANDROID_KEY_PASS')
+    // }
     // }
 
     lintOptions {
