--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -19,14 +19,8 @@ dependencies {
     
 
 
-    androidTestCompile 'junit:junit:4.11'
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-    androidTestCompile 'org.mockito:mockito-core:1.9.5'
-
-    
-    
-
-    
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
@@ -37,7 +31,6 @@ dependencies {
     compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
     compile 'com.github.kevinsawicki:http-request:3.0'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.github.kevinsawicki:android-pusher:0.6'
     compile 'com.github.kevinsawicki:wishlist:0.9'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.squareup.picasso:picasso:1.1.1'
@@ -46,11 +39,9 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
-    compile 'com.jakewharton.timber:timber:2.4.2'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
-    compile 'in.srain.cube:cube-sdk:1.0.44@aar'
-    compile 'com.github.nicolasjafelle:paginglistview:1.2'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.maps.android:android-maps-utils:0.2.1'
 }
 
 android {
@@ -60,8 +51,9 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 19
+        multiDexEnabled true
         versionCode 102
-        versionName '1.0'
+        versionName '1.1'
     }
 
     packagingOptions {
@@ -70,17 +62,21 @@ android {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 
-    // signingConfigs {
-    // release {
-    // storeFile file(System.getenv('ANDROID_KEYSTORE_PATH'))
-    // storePassword System.getenv('ANDROID_STORE_PASS')
-    // keyAlias System.getenv('ANDROID_KEY_ALIAS')
-    // keyPassword System.getenv('ANDROID_KEY_PASS')
-    // }
-    // }
+//    signingConfigs {
+//        release {
+//            storeFile file('../hkust2014_gmission.jks')
+//            storePassword 'hkust2014'
+//            keyAlias 'hkust2014_gmission'
+//            keyPassword 'hkust2014'
+//        }
+//    }
 
     lintOptions {
         abortOnError false
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
 
     buildTypes {
@@ -89,13 +85,14 @@ android {
             minifyEnabled false
             // zipAlign false // this is default for debug
         }
-        release {
-            // minifyEnabled true
-            // proguardFile '..\proguard.cfg'
-            // signingConfig signingConfigs.release
-            // zipAlign true // this is default for release
-            // testPackageName 'hk.ust.gmission.tests'
-            // testInstrumentationRunner 'android.test.InstrumentationTestRunner' // this is the default
-        }
+
+//        release {
+//            minifyEnabled true
+//            proguardFile '../proguard.cfg'
+//            signingConfig signingConfigs.release
+////             zipAlign true // this is default for release
+////             testPackageName 'hk.ust.gmission.test'
+////             testInstrumentationRunner 'android.test.InstrumentationTestRunner' // this is the default
+//        }
     }
 }
