--- a/gmission/src/main/AndroidManifest.xml
+++ b/gmission/src/main/AndroidManifest.xml
@@ -83,12 +83,15 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
 
         <activity
             android:name=".ui.activities.MapsActivity"
-            android:label="@string/title_activity_maps" />
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ui.activities.NavDrawerActivity"
+            android:label="@string/app_name" />
 
     </application>
 
