--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -17,8 +17,8 @@ repositories {
 
 dependencies {
 
-    //    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
@@ -40,7 +40,7 @@ dependencies {
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.maps.android:android-maps-utils:0.2.1'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
 
 android {
