--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.maps.android:android-maps-utils:0.2.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile files('libs/pushservice-4.6.0.66.jar')
 }
+
 
 android {
     compileSdkVersion 23
