--- a/proguard.cfg
+++ b/proguard.cfg
@@ -1,3 +1,4 @@
+#if you want to enable proguard, please update this file by yourself.
 -ignorewarnings
 -dontoptimize
 -dontobfuscate
@@ -48,7 +49,7 @@
     protected void finalizeReferent();
     public void finalizeReferent();
     void finalizeReferent();
-    
+
     private *** startFinalizer(java.lang.Class,java.lang.Object);
     protected *** startFinalizer(java.lang.Class,java.lang.Object);
     public *** startFinalizer(java.lang.Class,java.lang.Object);
@@ -78,3 +79,37 @@
 -keepclassmembers class **$$ViewInjector {*;}
 
 -dontwarn com.squareup.okhttp.**
+
+-keep class com.google.android.gms.maps.** { *; }
+-keep interface com.google.android.gms.maps.** { *; }
+
+-keep class * extends java.util.ListResourceBundle {
+    protected Object[][] getContents();
+}
+
+-keep class butterknife.** { *; }
+-dontwarn butterknife.internal.**
+-keep class **$$ViewBinder { *; }
+
+-keepclasseswithmembernames class * {
+    @butterknife.* <fields>;
+}
+
+-keepclasseswithmembernames class * {
+    @butterknife.* <methods>;
+}
+
+-keepattributes Signature
+-keepattributes InnerClasses,EnclosingMethod
+-keepattributes *Annotation*
+-keepattributes InnerClasses
+
+-dontwarn com.baidu.**
+-keep class com.baidu.**{*; }
+
+
+-dontwarn javax.annotation.**
+-dontwarn javax.inject.**
+-dontwarn sun.misc.Unsafe
+
+-keep class hk.ust.gmission.ui.**
