--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -16,7 +16,6 @@ repositories {
 }
 
 dependencies {
-
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
@@ -31,8 +30,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.kevinsawicki:wishlist:0.9'
     compile 'com.squareup:otto:1.3.4'
-    compile 'com.squareup.picasso:picasso:2.2.0'
-    compile 'com.squareup.okhttp:okhttp:1.5.4'
+    compile 'com.squareup.picasso:picasso:2.4.+'
+    compile 'com.squareup.okhttp:okhttp:1.6.+'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.+'
     compile 'com.squareup.retrofit:retrofit:1.5.1'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
@@ -54,8 +54,8 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         multiDexEnabled true
-        versionCode 117
-        versionName '1.0.0'
+        versionCode 119
+        versionName '1.0.2'
     }
 
     packagingOptions {
@@ -85,12 +85,8 @@ android {
         debug {
             signingConfig signingConfigs.release
             minifyEnabled false
+            debuggable false //when upload to google play, disable this option
         }
 
-        release {
-            minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), '../proguard.cfg'
-            signingConfig signingConfigs.release
-        }
     }
 }
