--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.google.maps.android:android-maps-utils:0.2.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.code.findbugs:jsr305:2.0.2'
@@ -49,14 +49,15 @@ dependencies {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 23
+        applicationId "hk.ust.gmission"
         multiDexEnabled true
-        versionCode 123
-        versionName '1.1.3'
+        versionCode 125
+        versionName '1.2'
     }
 
     packagingOptions {
@@ -86,7 +87,7 @@ android {
         debug {
             signingConfig signingConfigs.release
             minifyEnabled false
-            debuggable true //when upload to google play, disable this option
+            debuggable false//when upload to google play, disable this option
         }
 
     }
