--- a/gmission/build.gradle
+++ b/gmission/build.gradle
@@ -1,11 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-//        classpath 'com.android.tools.build:gradle:2.0.0-alpha3'
-//        classpath 'com.android.tools.build:gradle:2.2.0-alpha5'
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 apply plugin: 'com.android.application'
@@ -14,46 +13,51 @@ repositories {
     maven { url 'https://github.com/donnfelker/mvn-repo/raw/master/' }
     mavenLocal()
     mavenCentral()
+    google()
+    jcenter()
 }
 
 dependencies {
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'com.squareup.dagger:dagger:1.2.2'
-    compile 'com.squareup.dagger:dagger-compiler:1.2.2'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
-    compile 'com.github.kevinsawicki:http-request:3.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.github.kevinsawicki:wishlist:0.9'
-    compile 'com.squareup:otto:1.3.4'
-    compile 'com.squareup.picasso:picasso:2.4.+'
-    compile 'com.squareup.okhttp:okhttp:1.6.+'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.+'
-    compile 'com.squareup.retrofit:retrofit:1.5.1'
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.0'
-    compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
-    compile 'in.srain.cube:ultra-ptr:1.0.11'
-    compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.google.maps.android:android-maps-utils:0.2.1'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.google.code.findbugs:jsr305:2.0.2'
-    compile files('libs/pushservice-4.6.0.66.jar')
+//    api 'com.android.support:multidex:1.0.1'
+    api 'com.android.support:support-v4:26.1.0'
+    api 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.android.support:cardview-v7:26.1.0'
+    api 'com.android.support:recyclerview-v7:26.+'
+    api 'com.google.code.gson:gson:2.4'
+    api 'com.squareup.dagger:dagger:1.2.2'
+    annotationProcessor 'com.squareup.dagger:dagger-compiler:1.2.2'
+//    api 'com.jakewharton:butterknife:7.0.1'
+    api 'com.jakewharton:butterknife:7.0.1'
+    annotationProcessor 'com.jakewharton:butterknife:7.0.1'
+    api 'com.actionbarsherlock:viewpagerindicator:2.4.1'
+    api 'com.github.kevinsawicki:http-request:3.0'
+    api 'com.nineoldandroids:library:2.4.0'
+    api 'com.github.kevinsawicki:wishlist:0.9'
+    api 'com.squareup:otto:1.3.4'
+    api 'com.squareup.picasso:picasso:2.4.+'
+    api 'com.squareup.okhttp:okhttp:1.6.+'
+    api 'com.squareup.okhttp:okhttp-urlconnection:1.6.+'
+    api 'com.squareup.retrofit:retrofit:1.5.1'
+    api 'io.reactivex:rxandroid:1.2.1'
+    api 'io.reactivex:rxjava:1.1.6'
+    api 'com.jakewharton.rxbinding:rxbinding:0.3.0'
+//    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    api 'in.srain.cube:ultra-ptr:1.0.11'
+    api 'com.google.android.gms:play-services:8.4.0'
+    api 'com.google.maps.android:android-maps-utils:0.2.1'
+    api 'de.hdodenhof:circleimageview:2.0.0'
+    api 'com.google.code.findbugs:jsr305:2.0.2'
+    implementation files('libs/pushservice-4.6.0.66.jar')
 }
 
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 24
+        targetSdkVersion 26
         applicationId "hk.ust.gmission"
         multiDexEnabled true
         versionCode 125
@@ -83,11 +87,13 @@ android {
         javaMaxHeapSize "4g"
     }
 
+
+
     buildTypes {
         debug {
             signingConfig signingConfigs.release
             minifyEnabled false
-            debuggable false//when upload to google play, disable this option
+            debuggable true//when upload to google play, disable this option
         }
 
     }
